--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -32,16 +33,27 @@ android {
 }
 
 dependencies {
-    def nav_version = "2.3.5"
+    def nav_version = "2.5.3"
     def fragment_version = "1.5.7"
 
 
-    // Java language implementation
+    // Jetpack navigation
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
 
-    // Java language implementation
+    // Jetpack fragment
     implementation "androidx.fragment:fragment:$fragment_version"
+
+    // Firebase
+    implementation platform('com.google.firebase:firebase-bom:32.0.0')
+    // Auth
+    //implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+
+    // Database
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.annotation:annotation:1.3.0'
