--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,9 @@ dependencies {
     // Database
     implementation 'com.google.firebase:firebase-firestore'
 
+    // Splash screen
+    implementation "androidx.core:core-splashscreen:1.0.0"
+
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.annotation:annotation:1.3.0'
