--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/home"
+        android:icon="@drawable/purple_house_filled"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Roommates"
